--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,85 +1,6 @@
-* {
-	font-family:Tahoma;
-	color: #433E3E;
-}
 body {
-	background-color: #FFE5E5;
+	padding-top: 51px;
 }
-#header {
-	height: 400px;
-	background: rgba(0, 0, 0, 0.5);
-	border: black 10px solid;
-	border-radius: 5px;
-	margin-bottom: 10px;
-	padding-bottom: 30px;
-	background: url(http://www.wildnatureimages.com/images%203/San-Diego-Panoramic-Print..jpg);
-	background-size: cover;
-	}
-#sidebar {
-	width: 9.25em;
-	height: 45em;
-	background: rgba(0, 0, 0, 0.2);
-	border: black 0px solid;
-	border-radius: 5px;
-	float: left;
-	padding-left:43px;
-	margin-right: 10px;
-	margin-bottom: 10px;
+.navbar-inverse {
+	background-color: rgba(0, 0, 0, 0.8);
 }
-#left {
-	width: 51em;
-	height: 45em;
-	background: rgba(0, 0, 0, 0.2);
-	border: black 0px solid;
-	border-radius: 5px;
-	float: left;
-	margin-right:10px;
-	padding-left: 10px;
-}
-#right {
-	width: 24em;
-	height: 45em;
-	background: rgba(0, 0, 0, 0.2);
-	border: black 0px solid;
-	border-radius: 5px;
-	float: right;
-}
-#footer {
-	height: 50px;
-	background: rgba(0, 0, 0, 0.2);
-	border: black solid 0px;
-	border-radius: 5px;
-	clear: both;
-	margin-top:10px;
-}
-td {
-	font-size: 30px;
-	border: black solid 0px;
-	padding: 7px 91px 10px 7px;
-	text-align: center;
-
-}
-a {
-	text-decoration: none;
-	color: #433E3E;
-}
-a:hover {
-	color: #ffffff;
-	text-decoration: underline;
-}
-
-a:visited {
-	color: gray;
-}
-div > h1 {
-	padding-top: 0px;
-	text-align: center;
-	font-size: 70px;
-} 
-
-
-
-
-
-
-
